--- a/css/variables.scss
+++ b/css/variables.scss
@@ -5,7 +5,7 @@ $global-max-width: 1280px;
 // Color Pallette
 $red: #F44336;
 $pink: #E91E63;
-$purple: #9C27B0;
+$purple: #D286E2;
 $deep-purple: #673AB7;
 $indigo: #3F51B5;
 $blue: #0693C0;
@@ -21,7 +21,7 @@ $orange: #FF9800;
 $deep-orange: #FF5722;
 $brown: #795548;
 $grey: #90a4ae;
-$light-grey: #bdbdbd;
+$light-grey: #f5f5f5;
 $blue-grey: #607D8B;
 $black: #333333;
 $white: #ffffff;
