--- a/css/base.scss
+++ b/css/base.scss
@@ -1,6 +1,3 @@
-@import './vendors/normalize.css';
-@import 'variables';
-
 *,
 *:after,
 *:before {
@@ -14,5 +11,18 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
+  font-family: "Josefin Sans", sans-serif;
+  background: $light-grey;
 }
 
+.content {
+  max-width: $global-max-width;
+  margin: 0 auto;
+  background: $white;
+  font-size: 24px;
+
+  a {
+    text-decoration: none;
+    color: $purple;
+  }
+}
