--- a/css/components/nav.scss
+++ b/css/components/nav.scss
@@ -50,7 +50,7 @@
         .media__icon {
           line-height: $navbar-height;
           margin: 0 10px;
-          font-size: 24px;
+          font-size: 22px;
           color: $purple;
           transition: color 250ms;
 
@@ -71,12 +71,18 @@
               color: #0077b5;
             }
           }
+
+          &.github {
+            &:hover {
+              color: #333333;
+            }
+          }
         }
       }
     }
   }
 
-  @media (max-width: 820px) {
+  @media (max-width: 996px) {
     .nav__wrapper {
       .nav__item {
         display: block;
