--- a/css/base.scss
+++ b/css/base.scss
@@ -11,7 +11,6 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  font-family: "Josefin Sans", sans-serif;
   background: $light-grey;
 }
 
@@ -20,6 +19,7 @@ body {
   max-width: $global-max-width;
   margin: 0 auto;
   background: $white;
+  font-family: 'Signika', sans-serif;
   font-size: 24px;
 
   a {
