--- a/css/components/nav.scss
+++ b/css/components/nav.scss
@@ -4,6 +4,7 @@
   max-height: $navbar-height;
   width: 100%;
   overflow: hidden;
+  font-family: "Josefin Sans", sans-serif;
   font-weight: 700;
 
   @media (max-width: 820px) {
@@ -136,6 +137,78 @@
             }
           }
         }
+      }
+    }
+  }
+}
+
+.page--nav {
+  height: 150px;
+  font-size: 0;
+
+  a {
+    display: inline-block;
+    height: 100%;
+    width: 49.75%;
+    margin-right: 0.5%;
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+
+    &:hover {
+      cursor: pointer;
+      border-bottom: 2px solid transparent;
+    }
+  }
+
+  .button {
+    padding: 16px;
+    display: inline-block;
+    border: 2px solid $purple;
+    height: 100%;
+    width: 100%;
+    background: $purple;
+    transition: opacity 250ms;
+    overflow: hidden;
+
+    .desc {
+      color: $white;
+      text-align: center;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 2;
+
+      .desc--title {
+        font-size: 24px;
+      }
+
+      .desc--content {
+        margin: 8px 0;
+        font-weight: 300;
+        font-size: 18px;
+      }
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      top: 105%;
+      background: $white;
+      transition: top 250ms;
+    }
+
+    &:hover {
+      .desc {
+        color: $purple;
+      }
+
+      &::after {
+        top: 0%;
       }
     }
   }
