--- a/css/components/hero.scss
+++ b/css/components/hero.scss
@@ -17,6 +17,11 @@
     font-size: 42px;
     text-align: center;
     padding: 24px 0;
+
+    @media (max-width: 720px) {
+      font-size: 36px;
+      padding: 16px 0;
+    }
   }
 
   .hero--summary {
@@ -25,5 +30,14 @@
     padding: 24px 8%;
     font-weight: 300;
     line-height: 36px;
+
+    @media (max-width: 720px) {
+      font-size: 18px;
+      line-height: 24px;
+    }
+
+    @media (max-width: 520px) {
+      padding: 24px 4%;
+    }
   }
 }
