--- a/css/components/img.scss
+++ b/css/components/img.scss
@@ -12,6 +12,11 @@
       height: 100%;
       width: 100%;
     }
+
+    @media (max-width: 830px) {
+      display: block;
+      width: 100%;
+    }
   }
 
   .text__wrapper {
@@ -30,14 +35,37 @@
         font-weight: 700;
         margin-bottom: 16px;
         text-align: center;
+
+        @media (max-width: 960px) {
+          font-size: 24px;
+          line-height: 36px;
+        }
       }
 
       .text {
-        font-size: 24px;
-        line-height: 36px;
+        font-size: 18px;
+        line-height: 32px;
         font-weight: 300;
         margin: 8px 0;
+
+        @media (max-width: 960px) {
+          font-size: 18px;
+        }
       }
+
+      @media (max-width: 1135px) {
+        margin-top: 0%;
+      }
+    }
+
+    @media (max-width: 830px) {
+      display: block;
+      width: 100%;
+      padding: 24px 8%;
+    }
+
+    @media (max-width: 520px) {
+      padding: 18px 4%;
     }
   }
 }
