--- a/css/components/textbox.scss
+++ b/css/components/textbox.scss
@@ -5,6 +5,7 @@
     font-size: 24px;
     text-align: center;
     font-weight: 700;
+    padding: 4%;
   }
 
   .textbox--content {
@@ -13,5 +14,9 @@
     line-height: 32px;
     text-align: left;
     padding: 24px 8%;
+
+    @media (max-width: 540px) {
+      padding: 24px 4%;
+    }
   }
 }
