--- a/css/components/nav.scss
+++ b/css/components/nav.scss
@@ -8,8 +8,9 @@
   font-family: "Josefin Sans", sans-serif;
   font-weight: 700;
   background: rgba(255, 255, 255, 0.99);
+  z-index: 10000;
 
-  @media (max-width: 820px) {
+  @media (max-width: 996px) {
     transition: max-height 250ms;
     box-shadow: 0 1px 1px 1px rgba($grey, 0.15);
 
