--- a/css/components/img.scss
+++ b/css/components/img.scss
@@ -241,3 +241,71 @@
     column-count: 1;
   }
 }
+
+.pinterest__grid--small {
+  width: 100%;
+  font-size: 0;
+  -webkit-column-count: 2;
+  -moz-column-count: 2;
+  column-count: 2;
+  margin: 0 auto;
+
+  .img__wrapper {
+    height: 100%;
+    width: 100%;
+
+    img {
+      height: 100%;
+      width: 100%;
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: $white;
+      opacity: 0;
+      transition: opacity 250ms;
+    }
+
+    .text {
+      @include vertical-align();
+      position: absolute;
+      width: 100%;
+      z-index: 5;
+      padding: 36px;
+      color: $black;
+      text-align: center;
+      opacity: 0;
+      transition: opacity 250ms;
+
+      .title {
+        font-size: 36px;
+        letter-spacing: 4px;
+
+        @media (max-width: 780px) {
+          font-size: 24px;
+          letter-spacing: 2px;
+        }
+      }
+    }
+
+    &:hover {
+      .overlay {
+        opacity: 0.9;
+      }
+
+      .text {
+        opacity: 1;
+      }
+    }
+  }
+
+  @media (max-width: 780px) {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+  }
+}
